Raise requirements JDK to 11 and Android SDK to 30, use newer `FileProvider` to save screenshots